logs/validate.20260408-004128.log
Mode: isolate
<<<<<<< HEAD
Isolate: including Chap18 Chap02
verification results:: 1088 verified, 0 errors
Elapsed: 7s
Sampled Memory Usage: peak rust_verify RSS: 1731MB, peak z3 RSS: 182MB, min free: 25194MB
Sampled CPU Usage: rust_verify: 15s, z3 children: 8s
=======
Isolate: including Chap37 Chap18 Chap19 Chap23 Chap02
error[E0004]: non-exhaustive patterns: `Chap23::BalBinTreeStEph::BalBinTreeStEph::BalBinTree::Leaf` not covered
   --> src/Chap37/BSTAVLMtEph.rs:286:15
    |
286 |         match self {
    |               ^^^^ pattern `Chap23::BalBinTreeStEph::BalBinTreeStEph::BalBinTree::Leaf` not covered
    |
note: `Chap23::BalBinTreeStEph::BalBinTreeStEph::BalBinTree<T>` defined here
   --> src/Chap23/BalBinTreeStEph.rs:65:14
    |
 65 |     pub enum BalBinTree<T> {
    |              ^^^^^^^^^^
 66 |         Leaf,
    |         ---- not covered
    = note: the matched value is of type `Chap23::BalBinTreeStEph::BalBinTreeStEph::BalBinTree<T>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
    |
365 ~             },
366 +             Chap23::BalBinTreeStEph::BalBinTreeStEph::BalBinTree::Leaf => todo!()
    |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0004`.
Elapsed: 6s
Sampled Memory Usage: peak rust_verify RSS: 1729MB, peak z3 RSS: 50MB, min free: 25137MB
Sampled CPU Usage: rust_verify: 14s, z3 children: 7s
>>>>>>> agent4/ready
